# aprovacao_contrato_upload_docs

./: .gitignore  Dockerfile  README.md  pyproject.toml
.streamlit/: config.toml  secrets_example.toml
consulta_zipdin/: app.py
consulta_zipdin/common/arquivos/: arquivos.py
consulta_zipdin/common/db/: banco.py  query.sql
consulta_zipdin/common/generic/: function.py
consulta_zipdin/common/sabium/: sabium.py
consulta_zipdin/common/zipdin/: api_zipdin.py
consulta_zipdin/src/features/busca_contrato/: busca_contrato_controler.py  busca_contrato_page.py
consulta_zipdin/src/features/consulta/: consulta_controler.py  consulta_page.py
consulta_zipdin/src/features/login/: login_controller.py  login_page.py
consulta_zipdin/src/features/upload_with_validations/: upload_with_validations_controller.py  upload_with_validations_page.py
consulta_zipdin/src/services/busca_contrato/: busca_contrato_service.py
consulta_zipdin/src/services/consulta/: consulta_service.py  login.service.py
consulta_zipdin/src/services/login/: login_service.py
consulta_zipdin/src/services/upload_with_validation/: upload_with_validation_service.py
consulta_zipdin/src/widgets/: sidebar.py
