[project]
name = "consulta-zipdin"
version = "0.1.0"
description = ""
authors = [
    {name = " Isaias-Felix",email = "desenvolvimento1@novalar.com.br"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pypdf (>=5.3.0,<6.0.0)",
    "streamlit[pdf] (>=1.51.0,<2.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "streamlit-autorefresh (>=1.0.1,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "filetype (>=1.2.0,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
